syntax = "proto3";

package protobuf;

option go_package = "./";

service CommandStream {
  rpc ListenCommands (Request) returns (stream Response) {}
}

message Request {
  int64 targetChat = 1;
  string buildHash = 2;
  string buildTime = 3;
}

message Response {
  string cmd = 1;
  string actionID = 2;
}